--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmicjs/sdk": "^1.5.2",
     "bootstrap": "^5.3.3",
-    "@cosmicjs/sdk": "^1.3.1",
     "cosmicjs": "^5.0.5",
     "dotenv": "^16.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-photo-album": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
     "@types/node": "^20.17.24",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
