--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.3",
     "cosmicjs": "^5.0.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "next": "^15.2.4",
     "react": "^19.0.0",
