--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,10 @@ name: Vercel Production Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  NEXT_PUBLIC_COSMIC_BUCKET_SLUG: ${{ secrets.NEXT_PUBLIC_COSMIC_BUCKET_SLUG }}
+  NEXT_PUBLIC_COSMIC_READ_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_READ_KEY}}
+  NEXT_PUBLIC_COSMIC_WRITE_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_WRITE_KEY}}
+  
 on:
   push:
     branches:
