--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -2,6 +2,11 @@ name: Vercel PR Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  NEXT_PUBLIC_COSMIC_BUCKET_SLUG: ${{ secrets.NEXT_PUBLIC_COSMIC_BUCKET_SLUG }}
+  NEXT_PUBLIC_COSMIC_READ_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_READ_KEY}}
+  NEXT_PUBLIC_COSMIC_WRITE_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_WRITE_KEY}}
 on:
   pull_request:
 jobs:
