--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ env:
   NEXT_PUBLIC_COSMIC_BUCKET_SLUG: ${{ secrets.NEXT_PUBLIC_COSMIC_BUCKET_SLUG }}
   NEXT_PUBLIC_COSMIC_READ_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_READ_KEY}}
   NEXT_PUBLIC_COSMIC_WRITE_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_WRITE_KEY}}
+  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
   
 on:
   push:
@@ -21,4 +22,13 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          vercel deploy \
+            --prod \
+            --token="$VERCEL_TOKEN" \
+            --build-env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
+            --build-env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
+            --build-env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY" \
+            --env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
+            --env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
+            --env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY"
