--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -2,11 +2,10 @@ name: Vercel PR Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
   NEXT_PUBLIC_COSMIC_BUCKET_SLUG: ${{ secrets.NEXT_PUBLIC_COSMIC_BUCKET_SLUG }}
   NEXT_PUBLIC_COSMIC_READ_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_READ_KEY}}
   NEXT_PUBLIC_COSMIC_WRITE_KEY: ${{ secrets.NEXT_PUBLIC_COSMIC_WRITE_KEY}}
+  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 on:
   pull_request:
 jobs:
@@ -20,4 +19,12 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          vercel deploy \
+            --token="$VERCEL_TOKEN" \
+            --build-env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
+            --build-env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
+            --build-env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY" \
+            --env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
+            --env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
+            --env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY"
