feat: build prefix removed && git push

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,9 @@ jobs:
           vercel deploy \
             --prod \
             --token="$VERCEL_TOKEN" \
-            --env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
-            --env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
-            --env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY" \
+            --build-env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
+            --build-env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
+            --build-env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY" \
             --env NEXT_PUBLIC_COSMIC_BUCKET_SLUG="$NEXT_PUBLIC_COSMIC_BUCKET_SLUG" \
             --env NEXT_PUBLIC_COSMIC_READ_KEY="$NEXT_PUBLIC_COSMIC_READ_KEY" \
             --env NEXT_PUBLIC_COSMIC_WRITE_KEY="$NEXT_PUBLIC_COSMIC_WRITE_KEY"
